# BoAT-SupportLayer

./: Makefile  README.md  README_cn.md
common/: Makefile
common/cryptointf/: Makefile
common/http2/: Makefile
common/http2intf/: Makefile  http2intf.c  http2intf.h
common/rpc/: Makefile  http_client.c  http_client.cc  rpcintf.c
common/storage/: CMakeLists.txt  Makefile  persiststore.c  persiststore.h
common/utilities/: CMakeLists.txt  Makefile  base64.c  boatutility.c
crypto/crypto_default/: Makefile
include/: BSLTestsEntry.h  BoAT-SupportLayer.conf  boatDAL.h  boatOSAL.h  boatdal.h  boaterrcode.h  boatinternal.h  boatiotsdk.h  boatkeypair.h  boatkeystore.h  boatosal.h  boatplatform.h  boattypes.h  bsltestentry.h
keypair/: CMakeLists.txt  Makefile  boatkeypair.c
keystore/: Makefile  boat_keystore_intf.c  boat_keystore_intf.h
keystore/SE/NXP/sscom/se_process/: CMakeLists.txt  Makefile  se05x_APDU_impl.c  se05x_APDU_impl.h  se05x_enums.h  se05x_tlv.c  se05x_tlv.h  se_process.c  se_process.h
keystore/SE/NXP/sscom/smCom/: CMakeLists.txt  Makefile  smCom.c  smComT1oI2C.c  sm_types.h
keystore/SE/NXP/sscom/smCom/T1oI2C/: CMakeLists.txt  Makefile  phEseTypes.h  phNxpEsePal_i2c.c  phNxpEsePal_i2c.h  phNxpEseProto7816_3.c  phNxpEseProto7816_3.h  phNxpEse_Api.c  phNxpEse_Internal.h
keystore/soft/: CMakeLists.txt  Makefile  boat_keystore_soft.c  boat_keystore_soft.h
platform/: Makefile
platform/ChinaMobile-ML307A-DCLN/: README_cn.md  external.env
platform/Fibocom-FG150/: CMakeLists.txt  README.md  external.env
platform/Fibocom-FM650/: README.md  (+1 more)
storage/: CMakeLists.txt  Makefile  persiststore.c
tests/: Makefile  bsltestentry.h
utilities/: CMakeLists.txt  Makefile
(+272 files in other folders)
